Fixed an issue with invisible elements on mobile
hopefully

--- a/css/austin.css
+++ b/css/austin.css
@@ -38,10 +38,10 @@
   -o-filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
 }
 .invisible {
-  visibility: hidden!important;
+  visibility: hidden;
 }
 .visible {
-  visibility: visible!important;
+  visibility: visible;
 }
 body {
   background-repeat: no-repeat;
